deploy/base/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: secure-platform-dev
spec:
  selector:
    app: orders-service
  ports:
    - port: 80
      targetPort: 8000
