deploy/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: secure-platform-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
